--- a/Personality.qmd
+++ b/Personality.qmd
@@ -1,6 +1,7 @@
 ---
 title: "<span style='font-size: 30px;'> Psychological Traits </span> <span style='font-size: 20px; color:gray;'>[Box Plot Analysis] </span>"
 ---
+
 [How does personality affect the drug consumption patterns?]{style="background-color:#fdfd96;"}
 
 [This page will present a box plot analysis examining the influence of scores obtained in five personality factors from the NEO-FFI-R questionnaire on patterns of drug consumption. The analyzed factors include **Neuroticism (N Score), Extraversion (E Score), Openness to Experience (O Score), Agreeableness (A Score), and Conscientiousness (C Score)**. A higher score indicates a greater likelihood of experiencing specific feelings within each respective category.]{style="font-size: 12pt; color: gray;"}
@@ -18,7 +19,17 @@ These three drugs (alcohol, cafeeine and nocotine) are legal in all 6 analyzed c
 
 ### Alcohol
 
+There is no strong relationship between alcohol consumption and the Agreeableness (A), Conscientiousness (C), Extraversion (E), Neuroticism (N), and Openness to Experience (O) scores. The data does not suggest any significant trends or impacts of alcohol consumption on these personality traits.
+
 #### A Score
+
+-   There appears to be variability in A score across the different levels of alcohol consumption, with medians that vary slightly but not dramatically.
+
+-   The interquartile ranges are generally similar across the levels, indicating consistent variability within the groups.
+
+-   These mean values fluctuate both above and below zero, with the highest mean observed in CL1 (μ = 0.35) and the lowest in CL2 (μ = -0.08).
+
+-   The presence of more extreme outliers inCL3 could indicate that these groups have individuals with particularly high or low A scores compared to the rest of the sample.
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
@@ -37,6 +48,15 @@ ggplot(drug_or, aes(x = factor(Alcohol), y = AScore)) +
 ```
 
 #### C Score
+
+-   The median C score values within each level do not show a clear trend across the consumption levels, suggesting no consistent pattern between alcohol consumption and the median C score.
+
+-   The interquartile ranges (the heights of the boxes) are relatively similar across all levels, indicating consistent variability of C scores within each alcohol consumption group.
+
+-   The mean C score values (μ) vary across the different levels of alcohol consumption, with the highest mean at CL1 (μ = 0.49) and the lowest mean at CL2 (μ = -0.19).
+
+-   Outliers are present in several consumption levels, with CL5 having a notable cluster of outliers below the lower quartile, which indicates that a few individuals have C scores that are significantly lower than the median of that group.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -54,6 +74,15 @@ ggplot(drug_or, aes(x = factor(Alcohol), y = Cscore)) +
 ```
 
 #### E Score
+
+-   Median values of E score across the levels do not show a uniform pattern of increase or decrease, suggesting there is no strong median trend across the levels of alcohol consumption.
+
+-   The interquartile ranges are relatively consistent, implying similar variability in E score within each alcohol consumption group.
+
+-   Mean E score values (μ) are listed below each plot, showing some fluctuations, with the lowest mean at CL3 (μ = -0.38) and the highest at CL5 (μ = 0.17), but without a clear consistent trend correlating alcohol consumption levels with E score.
+
+-   There are outliers present, particularly at CL5, where several individuals have significantly lower E score values than the median of the group.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -72,6 +101,14 @@ ggplot(drug_or, aes(x = factor(Alcohol), y = Escore)) +
 
 #### N Score
 
+-   The median N score values within each level do not display a clear or consistent trend with respect to alcohol consumption levels, suggesting there is no strong relationship between the median N score and the amount of alcohol consumed.
+
+-   The interquartile ranges are relatively consistent across the levels, indicating a similar degree of variability in N score within each alcohol consumption group.
+
+-   Mean N score values are indicated with a notable increase to μ = 0.34 at CL2, followed by fluctuations. After CL2, the means do not show a consistent pattern, with μ = 0.09 at CL3, μ = 0.01 at CL4, dropping to μ = -0.08 at CL5, and increasing again to μ = 0.08 at CL6.
+
+-   Outliers are present at higher consumption levels (CL4 to CL6), indicating that some individuals consume more frequently have N score values that significantly deviate from the median of their respective groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -89,6 +126,15 @@ ggplot(drug_or, aes(x = factor(Alcohol), y = Nscore)) +
 ```
 
 #### O Score
+
+-   The median O score values, seem relatively consistent across the different levels of alcohol consumption. There's no clear upward or downward trend, suggesting that median OScore values are generally stable regardless of alcohol consumption level.
+
+-   The interquartile ranges appear consistent across medium to higher consumption levels (CL3 to CL6), but it is wider in CL0 and narrower in CL1 and CL2.
+
+-   The mean O score values exhibit slight variability but no apparent trend. They range from μ = -0.11 at CL0 to μ = 0.01 at CL6, with some fluctuation in between.
+
+-   There are outliers present at several levels, but not significant overall.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -107,7 +153,17 @@ ggplot(drug_or, aes(x = factor(Alcohol), y = Oscore)) +
 
 ### Caffeine
 
+Similarly to alcohol, caffeine consumption does not show a strong relationship with A, C, E, or O scores. The data does not present any clear trends that would indicate caffeine has a notable effect on these personality dimensions.
+
 #### A Score
+
+-   The median A score appears relatively consistent across different levels of caffeine consumption, with no dramatic changes.
+
+-   The interquartile ranges are fairly similar for each caffeine consumption level, except for CL1, suggesting similar variability in A score within each group.
+
+-   The means (μ) of A score for each level of caffeine consumption, indicated below the graph, are close to zero and do not show a clear increasing or decreasing trend. CL3 has a mean value (μ = -0.03) that is slightly negative, while the rest have positive mean values, though the differences are minimal.
+
+-   The presence of multiple outliers in CL6 indicates that this group might have more variability in A score compared to other groups.
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
@@ -126,6 +182,15 @@ ggplot(drug_or, aes(x = factor(Caff), y = AScore)) +
 ```
 
 #### C Score
+
+-   The median values of C score within each level do not display a consistent increasing or decreasing trend across the levels, suggesting no strong pattern between caffeine consumption and median C score.
+
+-   The interquartile ranges (heights of the boxes) and overall spread (whiskers) are relatively consistent across most levels, except too narrow CL1 and too wide CL2, indicating that the variability within most group is similar.
+
+-   The mean C score values (μ) indicated below the graph show some fluctuation across the different levels of caffeine consumption, with the highest mean at CL0 (μ = 0.41) and a general lack of a clear trend across the other levels.
+
+-   Outliers are present in several levels, with a noticeable concentration of lower outliers in CL6, indicating that some individuals have significantly lower C scores than the group's median.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -143,6 +208,15 @@ ggplot(drug_or, aes(x = factor(Caff), y = Cscore)) +
 ```
 
 #### E Score
+
+-   The median EScore values tend to increase gradually across the levels of caffeine consumption, albeit with a notable drop at CL1.
+
+-   The interquartile ranges are similar across most levels, except for narrower CL2 and CL4, suggesting that the variability within each caffeine consumption group is consistent.
+
+-   The mean EScore values (μ) are listed below each box plot. The means start at a negative value of μ = -0.31 at CL0 and fluctuate across the levels, peaking at μ = 0.08 at CL5, without showing a clear or consistent trend.
+
+-   There are several outliers present, particularly at CL5 and CL6, where a few individuals have EScore values significantly higher or lower than the median of the group.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -161,6 +235,14 @@ ggplot(drug_or, aes(x = factor(Caff), y = Escore)) +
 
 #### N Score
 
+-   The median N score values across the different levels of caffeine consumption show a relatively consistent horizontal alignment within the boxes, suggesting that the medians do not significantly fluctuate across the levels.
+
+-   The interquartile ranges are fairly consistent across the levels, except for narrower CL1 and CL2, indicating a similar amount of variability in N score within each caffeine consumption group.
+
+-   Mean N score values start with μ = 0.11 at CL0. There is considerable variation, with a peak at μ = 0.16 at CL2, followed by a decrease and then slight increases towards CL6, which ends at μ = 0.01. There is no clear trend across the levels.
+
+-   There are outliers at several levels, with some individuals having NScore values that significantly diverge from the median of their group, but are only more frequent in CL6.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -178,6 +260,15 @@ ggplot(drug_or, aes(x = factor(Caff), y = Nscore)) +
 ```
 
 #### O Score
+
+-   The median OScore values show some variation across the different levels of caffeine consumption. There's a noticeable increase in the median O score from CL0 to CL2, followed by a slight decrease and then a plateau from CL3 to CL6.
+
+-   The interquartile ranges (IQR)fluctuated, without a pattern.
+
+-   The mean O score values start at μ = -0.62 for CL0 and show fluctuations. There is a notable rise to μ = 0.03 by CL2, followed by a decrease to μ = -0.19 at CL3, and then a general increase to μ = 0.14 at CL4. The means then slightly decrease to μ = -0.04 by CL6.
+
+-   Outliers are present at several consumption levels, but not significant.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -195,7 +286,18 @@ ggplot(drug_or, aes(x = factor(Caff), y = Oscore)) +
 ```
 
 ### Nicotine
+
+A potential weak negative relationship exists between nicotine consumption and the A score, with mean values slightly decreasing as nicotine consumption levels increase. For the C and O scores, the relationship with nicotine consumption is not pronounced, indicating no strong correlations.
+
 #### A Score
+
+-   The median AScore values within each consumption level do not show a clear increasing or decreasing trend, and there are no dramatic differences between the levels.
+
+-   The interquartile ranges (the box heights) are relatively consistent across different nicotine consumption levels, suggesting similar variability within groups.
+
+-   The mean A score values (μ) across nicotine consumption levels show some variability, with the highest mean at CL0 (μ = 0.23) and a general decrease as the consumption levels increase, with CL4, CL5, and CL6 all having negative mean values (μ = -0.11, -0.08, and -0.08, respectively).
+
+-   There are outliers in multiple consumption levels, most notably in CL6, where there's a cluster of outliers, indicating a few individuals with significantly lower A score values compared to the rest.
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
@@ -214,6 +316,15 @@ ggplot(drug_or, aes(x = factor(Nicotine), y = AScore)) +
 ```
 
 #### C Score
+
+-   The median C score values within each level shows a trend of decreasing.
+
+-   The interquartile ranges (the height of the boxes) appear fairly consistent across the levels, except for narrow CL3, suggesting that the variability within each group is generally similar.
+
+-   The mean C score values (μ) are indicated below the graph, with the highest means observed at CL0 (μ = 0.3) and CL1 (μ = 0.29), and a downward trend as nicotine consumption levels increase, ending with μ = -0.23 at CL6.
+
+-   There are outliers observed at several levels, particularly at CL3 where there is a concentration of lower outliers, indicating that some individuals have C scores substantially lower than the median of that group.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -231,6 +342,15 @@ ggplot(drug_or, aes(x = factor(Nicotine), y = Cscore)) +
 ```
 
 #### E Score
+
+-   The median E scores appear relatively stable across the different levels of caffeine consumption, without a pronounced increasing or decreasing pattern.
+
+-   The interquartile ranges are quite similar across the levels, indicating that the spread of E score values within each level of nicotine consumption is relatively consistent.
+
+-   Mean E score values (μ) are presented below each box plot, with some fluctuation across the levels. The means range from a low of μ = -0.13 at CL3 to a high of μ = 0.21 at CL5, but there is no clear trend across the levels.
+
+-   There are outliers at several levels, with a few individuals having EScore values significantly above or below the median of their respective groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -249,6 +369,14 @@ ggplot(drug_or, aes(x = factor(Nicotine), y = Escore)) +
 
 #### N Score
 
+-   The median NScore values slightly increase across the different levels of nicotine consumption, but generally stable.
+
+-   The interquartile ranges suggest that the variability of NScore within each group is fairly comparable across the levels.
+
+-   Mean NScore values (μ) start at μ = -0.18 for CL0 and end at μ = 0.17 for CL6. There is some variation in mean values across the levels, but there does not appear to be a clear trend.
+
+-   There are outliers at various levels, especially lower outliers in CL5, indicating that some individuals have NScore values significantly different from the median of their respective groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -266,6 +394,15 @@ ggplot(drug_or, aes(x = factor(Nicotine), y = Nscore)) +
 ```
 
 #### O Score
+
+-   The median O score values do not show a consistent trend across the levels of nicotine consumption, it reaches its peak at CL4.
+
+-   The interquartile ranges seem relatively consistent across the levels, with no significant increase or decrease in the spread of values.
+
+-   The mean O score values start at μ = -0.32 for CL0 and generally increase to μ = 0.39 at CL4, then decrease to μ = 0.11 at CL6.
+
+-   There are outliers at several levels, notably at CL6, where individual values are significantly lower than the median, indicating that there is some variation in OScore within the groups that are not captured by the median.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -281,12 +418,24 @@ ggplot(drug_or, aes(x = factor(Nicotine), y = Oscore)) +
   annotate("segment", x = 1:7, xend = 1:7, y = quantile(drug_or$Oscore, 0.5), yend = quantile(drug_or$Oscore, 0.5), color = "black", size = 1.2) +
   annotate("text", x = 1:7, y = min(drug_or$Oscore) - 1, label = paste("μ =", round(mean_values$Oscore, 2)), vjust = 0, hjust = 0.5)
 ```
+
 ## **Controversial** Drugs
 
 This drug (cannabis) is legal in two analyzed countries (the United States and Canada) but illegal in four others.
 
 ### Cannabis
+
+There seems to be a weak negative relationship between cannabis consumption and the A score, with mean values decreasing slightly as consumption levels increase. For the C score, there is a potential negative relationship suggested by decreasing mean and median values. Cannabis consumption shows a positive trend with N and O scores, indicating that higher levels of cannabis use may be associated with higher scores in these dimensions.
+
 #### A Score
+
+-   The median values within each level appear stable, without sharp increases or decreases, indicating that the central tendency of A score does not change markedly with different levels of cannabis consumption.
+
+-   The interquartile ranges and overall data spread are relatively consistent across all levels, except for CL1 that is quite narrow, which suggests that the variability within most cannabis consumption group is similar.
+
+-   The mean A score values (μ) show a decreasing trend from CL0 to CL6, with the highest mean at CL0 (μ = 0.27) and a general decrease in mean values as cannabis consumption levels increase, ending with a mean of μ = -0.14 at CL6.
+
+-   Outliers are present in several levels, particularly in CL1 and CL6, indicating that within these groups, there are individuals with A scores that are considerably different from the median.
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
@@ -305,6 +454,15 @@ ggplot(drug_or, aes(x = factor(Cannabis), y = AScore)) +
 ```
 
 #### C Score
+
+-   The median C score values also follow a generally decreasing trend, with the highest medians in the lower consumption levels and lower medians in the higher consumption levels, even though the lowest is in CL4.
+
+-   The interquartile ranges show some variation across different levels but do not exhibit a clear pattern that would indicate increasing or decreasing variability with higher consumption levels.
+
+-   The mean C score values (μ) decrease as the levels of cannabis consumption increase, with a starting mean of μ = 0.47 at CL0 and decreasing to μ = -0.25 at CL6.
+
+-   There are outliers present at most levels of consumption, with a particularly noticeable number of lower outliers in the lowers and higest consumption levels (CL0 and CL6), suggesting that some individuals have C scores significantly lower than the median.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -322,6 +480,15 @@ ggplot(drug_or, aes(x = factor(Cannabis), y = Cscore)) +
 ```
 
 #### E Score
+
+-   The median E score values are stable within each level and do not show a clear pattern that would indicate a direct relationship between the median E score and the level of cannabis consumption.
+
+-   The interquartile ranges are narrower in CL0, CL1, and CL6, but wider in CL4, and CL5, without clear pattern.
+
+-   The mean E score values have a slight fluctuation across the levels. The means begin at μ = 0.1 for CL0 and exhibit minor changes, reaching μ = 0 at CL6. There is no clear upward or downward trend in the means across the levels.
+
+-   There are outliers, particularly at the lower end of the E score range at CL0 and CL6, showing that some individuals have significantly lower E score values than the medians of their groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -340,6 +507,14 @@ ggplot(drug_or, aes(x = factor(Cannabis), y = Escore)) +
 
 #### N Score
 
+-   The median N score values demonstrate a gradual increasing trend with higher levels of cannabis consumption.
+
+-   The interquartile ranges also show an increase with rising levels of cannabis consumption. This indicates greater variability in N score among individuals who consume more cannabis.
+
+-   The mean N score values commence at μ = -0.2 for the lowest level of consumption (CL0). There is a pronounced rise to μ = 0.26 by CL3. Subsequently, the mean values experience a minor decline, stabilising at μ = 0.08 for both CL5 and CL6, suggesting some fluctuations in the mean N score with varying levels of cannabis use.
+
+-   Outliers are present at several levels of consumption, particularly noticeable as upper outliers in CL0 and CL1.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -357,6 +532,15 @@ ggplot(drug_or, aes(x = factor(Cannabis), y = Nscore)) +
 ```
 
 #### O Score
+
+-   The medians increment from CL0 through CL6, suggesting that median O score values rise as cannabis consumption level increases.
+
+-   The interquartile ranges appear relatively consistent across different levels of consumption. This indicates that the variability in OScore does not change markedly with cannabis consumption levels.
+
+-   The mean O score values show a clear upward trend. Starting from μ = -0.61 at CL0, there is a steady increase in the mean values, culminating at μ = 0.48 at CL6.
+
+-   There are outliers visible at several levels, but not significant.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -378,7 +562,18 @@ ggplot(drug_or, aes(x = factor(Cannabis), y = Oscore)) +
 These two drugs (Cocaine, Heroin) are illegal across all six analyzed countries.
 
 ### Cocaine
+
+A more pronounced negative relationship is observed with cocaine consumption and A score compared to other substances. Similarly, there is a potential negative relationship with the C score. Cocaine consumption also seems to be positively correlated with N score, as higher consumption levels are associated with higher median and mean N scores. However, the relationship with E and O scores does not suggest a clear trend.
+
 #### A Score
+
+-   The median values within each consumption level vary, but there is no consistent pattern. However, there does appear to be a trend of decreasing median values with higher levels of consumption, particularly noticeable from CL3 to CL6.
+
+-   The interquartile ranges (heights of the boxes) are fairly consistent, except for CL6, where it is narrower, suggesting less variability within those groups.
+
+-   The mean A score values (μ) display a noticeable decreasing trend as cocaine consumption levels increase, with the highest mean at CL0 (μ = 0.17) and a significant decrease to the lowest mean at CL6 (μ = -0.79).
+
+-   There is a presence of outliers in several levels, especially in CL0 and CL2, which indicates that some individuals have AScore values that are significantly different from the majority within those groups.
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
@@ -397,6 +592,15 @@ ggplot(drug_or, aes(x = factor(Coke), y = AScore)) +
 ```
 
 #### C Score
+
+-   The median C score values across the consumption levels appear to generally decline as cocaine consumption levels increase, which is consistent with the reduction in mean values, except for CL6, which increases suddenly to have the highest median.
+
+-   The interquartile ranges show some variation but do not indicate a clear pattern of increasing or decreasing variability with higher consumption levels.
+
+-   The mean C score values with the initial mean at CL0 being μ = 0.21. As the levels of cocaine consumption increase, there is a general downward trend in mean values, reaching μ = -0.45 at CL5 before slightly increasing to μ = -0.02 at CL6.
+
+-   There is a significant presence of outliers, particularly in the lower range of CScores, at several consumption levels, with CL1 and CL3 having a number of lower outliers that stand out.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -414,6 +618,15 @@ ggplot(drug_or, aes(x = factor(Coke), y = Cscore)) +
 ```
 
 #### E Score
+
+-   The median E score values do not exhibit a clear increasing or decreasing trend in relation to the levels of cocaine consumption. Instead, the medians fluctuate from level to level.
+
+-   The interquartile ranges are extremely wide in CL4 and CL5, indicating a greater variability in these two levels.
+
+-   Mean E score values have significant fluctuations across the levels. The means start at μ = 0.03 for CL0 and show variations, peaking at μ = 0.33 at CL5 before dipping slightly to μ = 0.04 at CL6.
+
+-   Outliers are present at CL0 and CL2, with some individuals having E score values that are significantly higher or lower than the median of their respective groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -432,6 +645,14 @@ ggplot(drug_or, aes(x = factor(Coke), y = Escore)) +
 
 #### N Score
 
+-   The median NScore values show a gradual uptrend as the levels of cocaine consumption increase, indicating a potential association between higher NScore values and increased cocaine use.
+
+-   The interquartile ranges seem to be fairly consistent across the consumption levels, without a clear trend of increasing or decreasing variability.
+
+-   Mean NScore values have a noticeable upward trend from μ = -0.11 at CL0 to μ = 0.36 at CL6, suggesting higher average NScore values at increased levels of cocaine consumption.
+
+-   Outliers are present across several levels, particularly at the lower consumption levels (CL0), where some individuals have NScore values that are substantially lower than the group medians.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -449,6 +670,15 @@ ggplot(drug_or, aes(x = factor(Coke), y = Nscore)) +
 ```
 
 #### O Score
+
+-   The median O score values appear to be stable, having no clear consistent trend of increase or decrease as the levels progress from CL0 to CL6.
+
+-   The interquartile ranges appear fairly consistent across CL0 to CL5, but become wider in CL6.
+
+-   The mean O score values start at μ = -0.22 for CL0 with some increases and decreases across the levels, reaching a peak at μ = 0.33 for CL4, and then decreasing to μ = -0.07 at CL6.
+
+-   There are outliers at multiple levels, but not significant.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -466,7 +696,18 @@ ggplot(drug_or, aes(x = factor(Coke), y = Oscore)) +
 ```
 
 ### Heroin
+
+Heroin consumption is negatively related to the A score, as both mean and median values decrease with higher consumption levels. A potential negative relationship also exists with the E and C scores for higher levels of heroin consumption. In contrast, heroin shows a potential positive correlation with N score, with higher consumption levels related to higher scores. There may also be a positive relationship with O score, though this seems to plateau at higher consumption levels.
+
 #### A Score
+
+-   The median values of A score within each consumption level do not follow a uniform pattern but do generally decrease with higher levels of consumption, particularly noticeable from CL3 to CL6.
+
+-   The interquartile ranges (the heights of the boxes) remain relatively consistent across CL0 to CL3, but the range expands significantly at CL4 and narrows slightly at higher levels (CL5 and CL6).
+
+-   The mean A score values (μ) are presented below the graph, showing a substantial decreasing trend as heroin consumption levels increase, starting from a mean of μ = 0.09 at CL0 and descending to μ = -0.92 at CL6.
+
+-   There are outliers in several levels, notably at CL0, and CL2. These outliers indicate that some individuals' A score values are significantly different from the group's median.
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
@@ -485,6 +726,15 @@ ggplot(drug_or, aes(x = factor(Heroin), y = AScore)) +
 ```
 
 #### C Score
+
+-   The median C score values within each level seem to follow a downward trend, with higher levels of heroin consumption associated with lower median C scores.
+
+-   The interquartile ranges appear relatively similar across most levels, although they are slightly narrower at CL5 and CL6, indicating less variability within those groups.
+
+-   Mean C score values are provided beneath each box plot, highlighting a trend where the mean decreases as heroin consumption levels increase, starting from a mean of μ = 0.1 at CL0 and dropping to μ = -0.6 at CL6.
+
+-   There are outliers present at several levels, particularly in the lower score range CL0, indicating that some individuals have C scores significantly lower than the median of their respective groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -502,6 +752,15 @@ ggplot(drug_or, aes(x = factor(Heroin), y = Cscore)) +
 ```
 
 #### E Score
+
+-   The median EScore values within each level generally show a decrease as the heroin consumption level increases, although this is not a strictly linear decline.
+
+-   The interquartile ranges show that the variability within each group is relatively consistent across all levels, with no significant increase or decrease in spread as heroin consumption changes.
+
+-   Mean EScore values follow a similar trend as the median. Starting at μ = 0.04 for CL0, there is a trend of decline in the mean values as the levels of heroin consumption increase, with the lowest mean at μ = -0.7 for CL6.
+
+-   There are outliers present at multiple levels, with some individuals having EScore values that are significantly different from the medians of their groups, especially at CL0.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -520,6 +779,14 @@ ggplot(drug_or, aes(x = factor(Heroin), y = Escore)) +
 
 #### N Score
 
+-   The median N score values display a general increasing trend as the levels of heroin consumption rise.
+
+-   The interquartile ranges appear to remain relatively consistent across the consumption levels through CL0, CL2, CL3, and CL4. It is wider at CL1 and narrower at CL5 and CL6.
+
+-   The mean N score values exhibit a clear upward trend from μ = -0.07 at the lowest consumption level (CL0) to μ = 1.02 at the highest level (CL6), indicating an increase in mean NScore values with higher levels of heroin consumption.
+
+-   There are outliers present at various levels, particularly at the lower levels (CL0 ), where some individuals have N score values significantly lower than the group medians, reflecting individual variations within the dataset.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
@@ -537,6 +804,15 @@ ggplot(drug_or, aes(x = factor(Heroin), y = Nscore)) +
 ```
 
 #### O Score
+
+-   The median O score values exhibit an increasing trend from CL0 to CL2, indicating that the median OScore values rise as the heroin consumption level increases. However, the median values drop at CL6.
+
+-   The interquartile ranges seem consistent across CL0, CL1, CL3, and CL5. However, it is narrower in CL2 and CL4, wider in CL6.
+
+-   The mean O score values (μ) show an initial increase from μ = -0.09 at CL0 to μ = 0.51 at CL2, followed by a slight decrease and then stabilization around μ = 0.30 for CL5 and μ = 0.26 for CL6.
+
+-   Outliers are present at various consumption levels, particularly CL2, where individual O score values are notably lower than the median of their respective groups.
+
 ```{r, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 
